fix: Ignore internal aliases during RelNode normalization (#2332)